--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -6,9 +6,7 @@ page-login {
 	.or{
 		font-size: 40px;
 	}
-	.center {
-		margin-left: auto;
-		margin-right: auto;
-		display: block;
+	.acct{
+		font-size: 300%;
 	}
 }
