--- a/src/pages/route/route.scss
+++ b/src/pages/route/route.scss
@@ -1,3 +1,22 @@
 page-route {
+	ion-input{
+		border: 1px solid;
+	}
+	
+	.ion-label{
+		color: green;
+	}
 
+	.button{
+		background-color: #4CAF50;
+    	border: none;
+    	color: white;
+   	 	padding: 16px 32px;
+    	text-decoration: none;
+    	margin: 4px 2px;
+    	cursor: pointer;
+	}
+	.button:active{
+		background-color: #3e8e41;
+	}
 }
