--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,10 @@
 page-home {
-	.btn{
-		width:150px;
-	}
+    .map-container {
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+
+        width: 100%;
+        height: 100%;
+    }
 }
